# streamadapter

./: CMakeLists.txt  README.md  streamadapter.cpp  streamadapter.h  test.cpp
