cmake_minimum_required (VERSION 2.6)
project (streamadapter CXX)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
find_package(Boost 1.49 REQUIRED COMPONENTS system)
if(Boost_FOUND)
    set(TARGET_NAME streamadapter_test)
    include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
    set(SOURCES test.cpp streamadapter.cpp)
    add_executable(${TARGET_NAME} ${SOURCES})
    target_link_libraries(${TARGET_NAME} boost_system)
    set_property(TARGET ${TARGET_NAME} PROPERTY CXX_STANDARD 11)
endif(Boost_FOUND)

